--- a/notebooks/funit.ipynb
+++ b/notebooks/funit.ipynb
@@ -73,7 +73,7 @@
         "\n",
         "MODEL_NAME = 'FUNIT'\n",
         "# Data augmentation\n",
-        "RUN_NAME = 'FUNIT_new_hope_19'\n",
+        "RUN_NAME = 'FUNIT_new_hope_20'\n",
         "\n",
         "data_train_file = 'gs://tputestingmnist/datasets/dataset_funit_2.tfrecords'\n",
         "data_test_file = 'gs://tputestingmnist/datasets/dataset_test_funit_2.tfrecords'\n",
@@ -130,46 +130,49 @@
         "\n",
         "    return tf.concat([image_rgb, image[:,:,3:4]], axis=2)\n",
         "\n",
-        "def parser(serialized_example):\n",
-        "        \"\"\"Parses a single example into image and label tensors.\"\"\"\n",
-        "        features = tf.parse_single_example(\n",
-        "            serialized_example,\n",
-        "            features={\n",
-        "                'image_content': tf.FixedLenFeature([], tf.string),\n",
-        "                'image_style': tf.FixedLenFeature([], tf.string),\n",
-        "                'label': tf.FixedLenFeature([], tf.int64), \n",
-        "                'label_content': tf.FixedLenFeature([], tf.int64) \n",
-        "            })\n",
         "\n",
-        "        content_image = tf.decode_raw(features['image_content'], tf.uint8)\n",
-        "        content_image.set_shape([48 * 48 * 4])\n",
-        "        content_image = tf.reshape(content_image, [48, 48, 4])[:,:,:CHANNELS]\n",
-        "        content_image = augment(content_image)\n",
-        "        # Normalize the values of the image from [0, 255] to [-1.0, 1.0]\n",
-        "        content_image = tf.cast(content_image, dtype=tf.float32) / 127.5 - 1\n",
-        "        if ADD_NOISE_TO_EXAMPLE:\n",
-        "            content_image += tf.random_normal(shape=tf.shape(content_image), mean=0.0, stddev=0.1, dtype=tf.float32)\n",
+        "def get_parser(augment_fun = lambda x: x):\n",
+        "    def parser(serialized_example):\n",
+        "            \"\"\"Parses a single example into image and label tensors.\"\"\"\n",
+        "            features = tf.parse_single_example(\n",
+        "                serialized_example,\n",
+        "                features={\n",
+        "                    'image_content': tf.FixedLenFeature([], tf.string),\n",
+        "                    'image_style': tf.FixedLenFeature([], tf.string),\n",
+        "                    'label': tf.FixedLenFeature([], tf.int64), \n",
+        "                    'label_content': tf.FixedLenFeature([], tf.int64) \n",
+        "                })\n",
         "\n",
-        "        style_image = tf.decode_raw(features['image_style'], tf.uint8)\n",
-        "        style_image.set_shape([48 * 48 * 4])\n",
-        "        style_image = tf.reshape(style_image, [48, 48, 4])[:,:,:CHANNELS]\n",
-        "        style_image = augment(style_image)\n",
-        "        # Normalize the values of the image from [0, 255] to [-1.0, 1.0]\n",
-        "        style_image = tf.cast(style_image, dtype=tf.float32) / 127.5 - 1        \n",
-        "        if ADD_NOISE_TO_EXAMPLE:\n",
-        "            style_image += tf.random_normal(shape=tf.shape(style_image), mean=0.0, stddev=0.1, dtype=tf.float32)\n",
-        "        \n",
-        "        style_label, content_label = features['label'], features['label_content']\n",
+        "            content_image = tf.decode_raw(features['image_content'], tf.uint8)\n",
+        "            content_image.set_shape([48 * 48 * 4])\n",
+        "            content_image = tf.reshape(content_image, [48, 48, 4])[:,:,:CHANNELS]\n",
+        "            content_image = augment_fun(content_image)\n",
+        "            # Normalize the values of the image from [0, 255] to [-1.0, 1.0]\n",
+        "            content_image = tf.cast(content_image, dtype=tf.float32) / 127.5 - 1\n",
+        "            if ADD_NOISE_TO_EXAMPLE:\n",
+        "                content_image += tf.random_normal(shape=tf.shape(content_image), mean=0.0, stddev=0.1, dtype=tf.float32)\n",
         "\n",
-        "        return {'style_images': style_image, 'content_images': content_image, \n",
-        "                'style_labels': style_label, 'content_labels': content_label}, style_label\n",
+        "            style_image = tf.decode_raw(features['image_style'], tf.uint8)\n",
+        "            style_image.set_shape([48 * 48 * 4])\n",
+        "            style_image = tf.reshape(style_image, [48, 48, 4])[:,:,:CHANNELS]\n",
+        "            style_image = augment_fun(style_image)\n",
+        "            # Normalize the values of the image from [0, 255] to [-1.0, 1.0]\n",
+        "            style_image = tf.cast(style_image, dtype=tf.float32) / 127.5 - 1        \n",
+        "            if ADD_NOISE_TO_EXAMPLE:\n",
+        "                style_image += tf.random_normal(shape=tf.shape(style_image), mean=0.0, stddev=0.1, dtype=tf.float32)\n",
+        "            \n",
+        "            style_label, content_label = features['label'], features['label_content']\n",
+        "\n",
+        "            return {'style_images': style_image, 'content_images': content_image, \n",
+        "                    'style_labels': style_label, 'content_labels': content_label}, style_label\n",
+        "    return parser\n",
         "\n",
         "\n",
         "def make_input_fn(is_training=True, one_batch=False):\n",
         "    def input_fn(params):\n",
         "        batch_size = params['batch_size']\n",
         "        dataset = tf.data.TFRecordDataset(data_train_file, buffer_size=8*1024*1024)\n",
-        "        dataset = dataset.map(parser).cache().shuffle(batch_size)\n",
+        "        dataset = dataset.map(get_parser(augment)).cache().shuffle(batch_size)\n",
         "        if is_training:\n",
         "            dataset = dataset.repeat()\n",
         "        if one_batch:\n",
@@ -183,7 +186,7 @@
         "def predict_fn(params):\n",
         "    batch_size = params['batch_size']\n",
         "    dataset = tf.data.TFRecordDataset(data_test_file, buffer_size=8*1024*1024)\n",
-        "    dataset = dataset.map(parser).cache().shuffle(batch_size)\n",
+        "    dataset = dataset.map(get_parser()).cache().shuffle(batch_size)\n",
         "    dataset = dataset.take(params['batch_size'])\n",
         "        \n",
         "    dataset = dataset.batch(batch_size, drop_remainder=True).prefetch(8)\n",
@@ -675,7 +678,7 @@
       "metadata": {
         "id": "3eImay3kpN2C",
         "colab_type": "code",
-        "outputId": "7ecb17ac-61c4-4419-9701-2e078c2b2d7b",
+        "outputId": "0b102a86-5867-45ad-887d-663b1a48c563",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
