--- a/notebooks/funit.ipynb
+++ b/notebooks/funit.ipynb
@@ -68,11 +68,11 @@
     "LR_REC = 1\n",
     "LR_FEAT = 1\n",
     "KERNEL_SIZE = 4\n",
-    "NUM_CLASSES = 21\n",
+    "NUM_CLASSES = 41\n",
     "\n",
     "MODEL_NAME = 'FUNIT_new'\n",
-    "# Back to smaller dis and gen\n",
-    "RUN_NAME = 'FUNIT_new_hope_30'\n",
+    "# Fix classes\n",
+    "RUN_NAME = 'FUNIT_new_hope_34'\n",
     "\n",
     "data_train_file = 'gs://tputestingmnist/datasets/dataset_train_funit_4.tfrecords'\n",
     "data_test_file = 'gs://tputestingmnist/datasets/dataset_test_funit_4.tfrecords'\n",
