--- a/notebooks/dcgan_multi.ipynb
+++ b/notebooks/dcgan_multi.ipynb
@@ -77,8 +77,8 @@
         "KERNEL_SIZE = 4\n",
         "\n",
         "MODEL_NAME = 'DCGAN_MULTI'\n",
-        "# 21 but with bigger disc\n",
-        "RUN_NAME = 'DCGAN_MULTI_23'\n",
+        "# 23 other disc\n",
+        "RUN_NAME = 'DCGAN_MULTI_24'\n",
         "\n",
         "data_file = 'gs://tputestingmnist/datasets/dataset_multi.tfrecords'\n",
         "MODEL_DIR = 'gs://tputestingmnist/{}/{}/'.format(MODEL_NAME, RUN_NAME)\n",
@@ -276,14 +276,12 @@
         "    @staticmethod\n",
         "    def discriminator(x, is_training=False, scope='Discriminator'):\n",
         "        with tf.variable_scope(scope, reuse=tf.AUTO_REUSE):            \n",
-        "            x = convolution_block(x, 2 * 64, kernel_size=KERNEL_SIZE, resize_factor=2, index='disc_10')\n",
-        "            x = convolution_block(x, 2 * 128, kernel_size=KERNEL_SIZE, resize_factor=2, normalization=_get_batch_norm(is_training, 'bn11'), index='disc_12')\n",
-        "            x = convolution_block(x, 2 * 256, kernel_size=KERNEL_SIZE, resize_factor=2, normalization=_get_batch_norm(is_training, 'bn12'), index='disc_13')\n",
+        "            x = convolution_block(x, 4 * 64, kernel_size=KERNEL_SIZE, resize_factor=2, index='disc_10')\n",
+        "            x = convolution_block(x, 4 * 128, kernel_size=KERNEL_SIZE, resize_factor=2, normalization=_get_batch_norm(is_training, 'bn11'), index='disc_12')\n",
+        "            x = convolution_block(x, 4 * 256, kernel_size=KERNEL_SIZE, resize_factor=2, normalization=_get_batch_norm(is_training, 'bn12'), index='disc_13')\n",
         "            x = convolution_block(x, 2 * 512, kernel_size=KERNEL_SIZE, resize_factor=2, normalization=_get_batch_norm(is_training, 'bn13'), index='disc_14')\n",
-        "\n",
-        "            x = convolution_block(x, 2 * 512, kernel_size=3, resize_factor=3, normalization=_get_batch_norm(is_training, 'bn13'), index='disc_14')\n",
-        "\n",
-        "            output = _dense(x, 1, activation=None, name='disc_out')\n",
+        "            \n",
+        "            output = convolution_block(x, 1, kernel_size=3, resize_factor=3, activation=None, index='disc_out')\n",
         "            return output, x\n",
         "          \n",
         "    @staticmethod\n",
@@ -530,10 +528,10 @@
       "metadata": {
         "id": "3eImay3kpN2C",
         "colab_type": "code",
-        "outputId": "42a4c415-dc6b-47b3-e211-f9b4ee5a8836",
+        "outputId": "3d48d4fa-1ea5-46ae-8631-25565dd5a186",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 714
+          "height": 1000
         }
       },
       "source": [
@@ -545,29 +543,29 @@
         "    print (e)\n",
         "    pass"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
-            "WARNING:tensorflow:Estimator's model_fn (<function make_model_fn.<locals>.model_fn at 0x7fdb65652378>) includes params argument, but params are not passed to Estimator.\n",
-            "INFO:tensorflow:Using config: {'_model_dir': 'gs://tputestingmnist/DCGAN_MULTI/DCGAN_MULTI_23/', '_tf_random_seed': None, '_save_summary_steps': 5000, '_save_checkpoints_steps': 5000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
+            "WARNING:tensorflow:Estimator's model_fn (<function make_model_fn.<locals>.model_fn at 0x7f97e9aacae8>) includes params argument, but params are not passed to Estimator.\n",
+            "INFO:tensorflow:Using config: {'_model_dir': 'gs://tputestingmnist/DCGAN_MULTI/DCGAN_MULTI_24/', '_tf_random_seed': None, '_save_summary_steps': 5000, '_save_checkpoints_steps': 5000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
             "graph_options {\n",
             "  rewrite_options {\n",
             "    meta_optimizer_iterations: ONE\n",
             "  }\n",
             "}\n",
-            ", '_keep_checkpoint_max': 3, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7fdb695cbac8>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': 'grpc://10.92.86.26:8470', '_evaluation_master': 'grpc://10.92.86.26:8470', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=5000, num_shards=None, num_cores_per_replica=None, per_host_input_for_training=2, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None, eval_training_input_configuration=2, experimental_host_call_every_n_steps=1), '_cluster': None}\n",
+            ", '_keep_checkpoint_max': 3, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7f97e7dbc518>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': 'grpc://10.92.86.26:8470', '_evaluation_master': 'grpc://10.92.86.26:8470', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=5000, num_shards=None, num_cores_per_replica=None, per_host_input_for_training=2, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None, eval_training_input_configuration=2, experimental_host_call_every_n_steps=1), '_cluster': None}\n",
             "INFO:tensorflow:_TPUContext: eval_on_tpu True\n",
-            "WARNING:tensorflow:Estimator's model_fn (<function make_model_fn.<locals>.model_fn at 0x7fdb65652378>) includes params argument, but params are not passed to Estimator.\n",
-            "INFO:tensorflow:Using config: {'_model_dir': 'gs://tputestingmnist/DCGAN_MULTI/DCGAN_MULTI_23/', '_tf_random_seed': None, '_save_summary_steps': 5000, '_save_checkpoints_steps': 5000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
+            "WARNING:tensorflow:Estimator's model_fn (<function make_model_fn.<locals>.model_fn at 0x7f97e9aacae8>) includes params argument, but params are not passed to Estimator.\n",
+            "INFO:tensorflow:Using config: {'_model_dir': 'gs://tputestingmnist/DCGAN_MULTI/DCGAN_MULTI_24/', '_tf_random_seed': None, '_save_summary_steps': 5000, '_save_checkpoints_steps': 5000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
             "graph_options {\n",
             "  rewrite_options {\n",
             "    meta_optimizer_iterations: ONE\n",
             "  }\n",
             "}\n",
-            ", '_keep_checkpoint_max': 3, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7fdb695cbc88>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': 'grpc://10.92.86.26:8470', '_evaluation_master': 'grpc://10.92.86.26:8470', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=5000, num_shards=None, num_cores_per_replica=None, per_host_input_for_training=2, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None, eval_training_input_configuration=2, experimental_host_call_every_n_steps=1), '_cluster': None}\n",
+            ", '_keep_checkpoint_max': 3, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7f97e7dbc080>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': 'grpc://10.92.86.26:8470', '_evaluation_master': 'grpc://10.92.86.26:8470', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=5000, num_shards=None, num_cores_per_replica=None, per_host_input_for_training=2, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None, eval_training_input_configuration=2, experimental_host_call_every_n_steps=1), '_cluster': None}\n",
             "INFO:tensorflow:_TPUContext: eval_on_tpu True\n",
             "WARNING:tensorflow:eval_on_tpu ignored because use_tpu is False.\n",
             "Starting training\n",
@@ -576,22 +574,56 @@
             "INFO:tensorflow:*** Num TPU Cores: 8\n",
             "INFO:tensorflow:*** Num TPU Workers: 1\n",
             "INFO:tensorflow:*** Num TPU Cores Per Worker: 8\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:CPU:0, CPU, -1, 7616143353029959712)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:0, TPU, 17179869184, 2849792470831771347)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:1, TPU, 17179869184, 11406500160612199564)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:2, TPU, 17179869184, 3299220720098600937)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:3, TPU, 17179869184, 16324531610249587481)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:4, TPU, 17179869184, 14003433274669571253)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:5, TPU, 17179869184, 15682037868119884635)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:6, TPU, 17179869184, 9510473332168181149)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:7, TPU, 17179869184, 16265843466177868555)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU_SYSTEM:0, TPU_SYSTEM, 8589934592, 4178219860608366659)\n",
-            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:XLA_CPU:0, XLA_CPU, 17179869184, 18307169991009590233)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:CPU:0, CPU, -1, 6036075884354506761)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:0, TPU, 17179869184, 14465673779690809053)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:1, TPU, 17179869184, 3996128711207650129)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:2, TPU, 17179869184, 7545965745908123415)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:3, TPU, 17179869184, 12055390231564182766)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:4, TPU, 17179869184, 701971031373954014)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:5, TPU, 17179869184, 6113396105214246370)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:6, TPU, 17179869184, 7083893080930556570)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:7, TPU, 17179869184, 7474741599348032320)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU_SYSTEM:0, TPU_SYSTEM, 8589934592, 11938395774419637690)\n",
+            "INFO:tensorflow:*** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:XLA_CPU:0, XLA_CPU, 17179869184, 6062847744647175624)\n",
             "INFO:tensorflow:Calling model_fn.\n",
-            "ERROR:tensorflow:Error recorded from training_loop: Trying to share variable Discriminator/conv_disc_14/kernel, but specified shape (3, 3, 1024, 1024) and found shape (4, 4, 512, 1024).\n",
-            "INFO:tensorflow:training_loop marked as finished\n",
-            "WARNING:tensorflow:Reraising captured error\n",
-            "Trying to share variable Discriminator/conv_disc_14/kernel, but specified shape (3, 3, 1024, 1024) and found shape (4, 4, 512, 1024).\n"
+            "INFO:tensorflow:Create CheckpointSaverHook.\n",
+            "INFO:tensorflow:Done calling model_fn.\n",
+            "INFO:tensorflow:TPU job name tpu_worker\n",
+            "INFO:tensorflow:Graph was finalized.\n",
+            "INFO:tensorflow:Restoring parameters from gs://tputestingmnist/DCGAN_MULTI/DCGAN_MULTI_24/model.ckpt-45000\n",
+            "INFO:tensorflow:Running local_init_op.\n",
+            "INFO:tensorflow:Done running local_init_op.\n",
+            "INFO:tensorflow:Saving checkpoints for 45000 into gs://tputestingmnist/DCGAN_MULTI/DCGAN_MULTI_24/model.ckpt.\n",
+            "INFO:tensorflow:Initialized dataset iterators in 0 seconds\n",
+            "INFO:tensorflow:Installing graceful shutdown hook.\n",
+            "INFO:tensorflow:Creating heartbeat manager for ['/job:tpu_worker/replica:0/task:0/device:CPU:0']\n",
+            "INFO:tensorflow:Configuring worker heartbeat: shutdown_mode: WAIT_FOR_COORDINATOR\n",
+            "\n",
+            "INFO:tensorflow:Init TPU system\n",
+            "INFO:tensorflow:Initialized TPU in 7 seconds\n",
+            "INFO:tensorflow:Starting infeed thread controller.\n",
+            "INFO:tensorflow:Starting outfeed thread controller.\n",
+            "INFO:tensorflow:Enqueue next (5000) batch(es) of data to infeed.\n",
+            "INFO:tensorflow:Dequeue next (5000) batch(es) of data from outfeed.\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 0)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 249)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 498)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 747)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 996)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 1245)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 1494)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 1743)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 1992)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 2241)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 2490)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 2739)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 2988)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 3237)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 3486)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 3735)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 3984)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 4233)\n",
+            "INFO:tensorflow:Outfeed finished for iteration (0, 4482)\n"
           ],
           "name": "stdout"
         }
