try with more examples - apply changes

--- a/notebooks/funit.ipynb
+++ b/notebooks/funit.ipynb
@@ -65,17 +65,17 @@
     "G_LR = 0.0002\n",
     "D_LR = 0.0001\n",
     "LR_STD = 1\n",
-    "LR_REC = 2\n",
-    "LR_FEAT = 20\n",
+    "LR_REC = 3\n",
+    "LR_FEAT = 10\n",
     "KERNEL_SIZE = 4\n",
-    "NUM_CLASSES = 41\n",
+    "NUM_CLASSES = 99\n",
     "\n",
     "MODEL_NAME = 'FUNIT_new'\n",
     "# Balance losses\n",
-    "RUN_NAME = 'FUNIT_new_hope_38'\n",
+    "RUN_NAME = 'FUNIT_new_hope_44'\n",
     "\n",
-    "data_train_file = 'gs://tputestingmnist/datasets/dataset_train_funit_4.tfrecords'\n",
-    "data_test_file = 'gs://tputestingmnist/datasets/dataset_test_funit_4.tfrecords'\n",
+    "data_train_file = 'gs://tputestingmnist/datasets/dataset_train_funit_6.tfrecords'\n",
+    "data_test_file = 'gs://tputestingmnist/datasets/dataset_test_funit_6.tfrecords'\n",
     "MODEL_DIR = 'gs://tputestingmnist/{}/{}/'.format(MODEL_NAME, RUN_NAME)\n",
     "GOOGLE_DRIVE_DIR = '/content/gdrive/My Drive/Programowanie/PixelGen/{}'.format(RUN_NAME)\n",
     "TF_MASTER = 'grpc://{}'.format(os.environ['COLAB_TPU_ADDR'])"
@@ -226,15 +226,11 @@
     "\n",
     "    # Rescale images to 0 - 1\n",
     "    images = images_to_zero_one(images)\n",
-    "    fig, axs = plt.subplots(R, C, figsize=(20,20))\n",
-    "\n",
-    "    for i in range(R):\n",
-    "        for j in range(C):\n",
-    "            axs[i,j].imshow(images[C*i + j])\n",
-    "            axs[i,j].axis('off')\n",
-    "\n",
-    "    fig.savefig(os.path.join(GOOGLE_DRIVE_DIR, '{}.png'.format(epoch)))\n",
-    "    plt.close()"
+    "    rows = []\n",
+    "    for r in range(R):\n",
+    "        rows.append(np.concatenate([np.pad(images[r*C + c], pad_width=((5, 5), (5,5), (0,0))) for c in range(C)], axis=1))\n",
+    "    joined_image = np.concatenate(rows, axis=0)\n",
+    "    plt.imsave(os.path.join(GOOGLE_DRIVE_DIR, '{}.png'.format(epoch)), joined_image)"
    ],
    "execution_count": 0,
    "outputs": []
