--- a/notebooks/funit.ipynb
+++ b/notebooks/funit.ipynb
@@ -68,8 +68,8 @@
     "NUM_CLASSES = 99\n",
     "\n",
     "MODEL_NAME = 'FUNIT_new'\n",
-    "# k=4\n",
-    "RUN_NAME = 'FUNIT_new_hope_47'\n",
+    "# three layers in mlp\n",
+    "RUN_NAME = 'FUNIT_new_hope_48'\n",
     "\n",
     "data_train_file = 'gs://tputestingmnist/datasets/dataset_train_funit_6.tfrecords'\n",
     "data_test_file = 'gs://tputestingmnist/datasets/dataset_test_funit_6.tfrecords'\n",
@@ -153,7 +153,7 @@
     "            if add_noise:\n",
     "                content_image += tf.random_normal(shape=tf.shape(content_image), mean=0.0, stddev=0.1, dtype=tf.float32)\n",
     "\n",
-    "            style_examples = 4 if is_predict else 1\n",
+    "            style_examples = 2 if is_predict else 1\n",
     "            style_images = tf.decode_raw(features['image_style'], tf.uint8)\n",
     "            style_images.set_shape([48 * 48 * 4 * style_examples])\n",
     "            style_images = tf.reshape(style_images, [48, 48, 4, style_examples])[:,:,:CHANNELS,:]\n",
@@ -356,7 +356,7 @@
     "\n",
     "def mlp(x, feature_number):\n",
     "    x = fully_connected_block(x, 256, 'mlp1')\n",
-    "    # x = fully_connected_block(x, 256, 'mlp2')\n",
+    "    x = fully_connected_block(x, 256, 'mlp2')\n",
     "    x = fully_connected_block(x, feature_number, 'mlp3', activation=None)\n",
     "    \n",
     "    return x\n",
